--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
-theme: jekyll-theme-dinky
+remote_theme: pages-themes/minimal@v0.2.0
 plugins:
+  - jekyll-remote-theme 
   - jekyll-relative-links
 relative_links:
   enabled: true
