--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,8 @@ remote_theme: pages-themes/minimal@v0.2.0
 plugins:
   - jekyll-remote-theme 
   - jekyll-relative-links
+title: Branden's Bonfire
+description: Come on over and take a seat. Let's chat. 
 relative_links:
   enabled: true
   collections: true
