--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-remote_theme: alshedivat/al-folio
+remote_theme: daattali/beautiful-jekyll
 plugins:
   - jekyll-remote-theme 
   - jekyll-relative-links
