--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-remote_theme: daattali/beautiful-jekyll
+remote_theme: nielsenramon/chalk
 plugins:
   - jekyll-remote-theme 
   - jekyll-relative-links
